# ECHO_Version

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
calibrations/: README.md  manifest.example.json
configs/: default.json  local.example.json
datasets/: README.md  index.example.csv
docs/: ARCHITECTURE.md  ARCHITECTURE_BOUNDARIES.md  BENCH_WORKFLOW.md  CAPABILITY_CATALOG.md  CURRENT_HANDOFF.md  CURRENT_WORKFLOW.md  DOCUMENTATION_SYSTEM.md  ENGINEERING_RED_LINES.md  HARDWARE.md  LEGACY_CODE_AUDIT.md  METRICS.md  PROJECT_STATUS.md  RISK_REGISTER.md  ROBUSTNESS.md  SOURCES.md  VISION_MCU_PROTOCOL.md
docs/capabilities/: README.md  V0_RUNTIME_FOUNDATION.md  V1_DEVICE_DISCOVERY.md
docs/debuglogs/: 2026-07-15_documentation_governance.md  2026-07-15_robustness_governance.md  2026-07-15_v0_baseline.md  2026-07-15_v1_first_device_discovery.md  README.md
docs/evidence/: 2026-07-15_maixcam_discovery.json  README.md
docs/learning/: 2026-07-15_MAIXCAM_FIRST_CONNECTION.md  2026-07-15_ROBUSTNESS_FOUNDATIONS.md  2026-07-15_V0_FOUNDATIONS.md  README.md  VISION_LEARNING_PATH.md
docs/phases/: V0_BASELINE.md  V1_ACQUISITION.md
docs/worklogs/: 2026-07-15_documentation_retention.md  2026-07-15_robustness_and_github.md  2026-07-15_v0_scaffold.md  (+2 more)
models/: README.md  manifest.example.json
protocol/: README.md  schema_v1.json
recordings/: README.md  index.example.csv
tests/: README.md  test_config.py  test_core_types.py  test_file_replay.py  test_latest_value.py  test_protocol.py
tools/: README.md  device_cli.py  discover_devices.ps1  replay.py
(+27 files in other folders)
