[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "echo-vision"
version = "0.1.0"
description = "Maintainable vision runtime for the ECHO electronic design contest project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24",
  "Pillow>=9.0",
]

[project.optional-dependencies]
opencv = ["opencv-python-headless>=4.8"]
device = ["pyserial>=3.5"]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
echo-vision-replay = "echo_vision.runtime.replay:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
